Bug 487610 - Messages marked manually as Junk are never moved to Junk folder (if user doesn't check "Enable adaptive junk mail controls for this account"), r/sr=bienvenu